<resources>
    <string name="app_name">COVIDAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">아이디</string>
    <string name="nav_header_subtitle">로그인 계정</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">코로나19 현황</string>
    <string name="menu_wearable">웨어러블 데이터</string>
    <string name="menu_test">설문조사</string>
    <string name="menu_result">자가진단 결과</string>
    <!-- Strings related to login -->
    <string name="prompt_email">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">"환영합니다!"</string>
    <string name="invalid_username">허용되지 않은 아이디입니다.</string>
    <string name="invalid_password">비밀번호는 5자 이상이어야 합니다.</string>
    <string name="login_failed">"로그인에 실패하였습니다. "</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings related to sign up -->
    <string name="name">이름</string>
    <string name="action_sign_up">회원가입</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- Strings related to Wearable -->
    <string name="HeartRate">심박수</string>
    <string name="SpO2">혈중 산소포화도</string>
    <string name="condition_normal">정상</string>
    <string name="condition_caution">주의</string>
    <string name="condition_danger">위험</string>

    <string name="save">저장</string>

    <!-- 1. Strings related to temperature -->
    <string name="select_temp">1. 체온을 선택해주세요.</string>
    <string name="under37">37도 미만</string>
    <string name="over37">37도 이상</string>


    <string name="yes">예.</string>
    <string name="no">아니오.</string>

    <!-- 2. Strings related to illness -->
    <string name="select_illness">2. 몸이 아픈가요?</string>


    <!-- 3. Strings related to runny nose -->
    <string name="select_runnynose">3. 콧물이 나오나요?</string>

    <!-- 4. Strings related to shortness of breath -->
    <string name="select_shortbreath">4. 호흡곤란을 겪은 적이 있습니까?</string>

    <!-- 5. Strings related to exhaustion -->
    <string name="select_exhaustion">5. 피곤한가요?</string>

    <!-- 6. Strings related to cough -->
    <string name="select_cough">6. 마른 기침이 나오나요?</string>

    <!-- 7. Strings related to throat -->
    <string name="select_throat">7. 목이 아픈가요?</string>

    <!-- 8. Strings related to covid19 experience -->
    <string name="select_covidexp">8. Covid-19에 걸렸던적이 있나요?</string>

    <!-- 9. Strings related to stuffy nose -->
    <string name="select_stuffynose">9. 코가 막혔나요?</string>

    <!-- 10. Strings related to diarrhea -->
    <string name="select_diarrhea">10. 설사를 했나요?</string>

    <!-- 11. Strings related to contact -->
    <string name="select_contact">2. 최근(3일 이내) 확진자와 접촉했나요?</string>

    <!-- Strings related to Result -->
    <string name="What_is_your_score">나의 코로나19 감염\n위험도 점수는?</string>
    <string name="select_data">국가 데이터 선택</string>
    <string-array name="data_versions" translatable="false">
        <item>대한민국</item>
        <item>미국</item>
        <item>중국</item>
        <item>WHO</item>
    </string-array>

    <string name="my_score" >결과 보기</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="designed_by_freepik">designed by Freepik</string>
</resources>