<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_timeline"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wearable"
            android:icon="@drawable/ic_menu_wearble"
            android:title="@string/menu_wearable" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_survey"
            android:title="@string/menu_test" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_menu_result"
            android:title="@string/menu_result" />
    </group>
</menu>