<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.covidapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_wearable"
        android:name="com.example.covidapp.ui.wearable.WearableFragment"
        android:label="@string/menu_wearable"
        tools:layout="@layout/activity_wearable" />

    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.covidapp.ui.test.TestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/nav_result"
        android:name="com.example.covidapp.ui.result.ResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />
</navigation>