<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkResult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/resultlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WhatIsYourScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/What_is_your_score"
                android:textAlignment="center"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/mask"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/designed_by_freepik"
                android:src="@drawable/mask" />

            <TextView
                android:id="@+id/image_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:text="@string/designed_by_freepik"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/result_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="10dp"
                android:background="@color/dark_lime"
                android:text="@string/my_score"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resultlayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/finalScore"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="120dp"
                android:textAlignment="center"
                android:textSize="140sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/finalScore"
                app:layout_constraintBottom_toBottomOf="@id/finalScore"
                android:text="점"
                android:textSize="40sp">

            </TextView>

            <TextView
                android:id="@+id/finalCondition"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/finalScore"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="50sp"
                android:textColor="@color/dark_lime"
                android:textAlignment="center">

            </TextView>


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/navigationView"
                android:background="?android:attr/windowBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:menu="@menu/main_bottomnavigation"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</LinearLayout>
